fable/test/valid/data_08.f
      program prog
      data num /12,34/
      dimension num(2)
      write(6, *) num(1), num(2)
      end
