fable/test/syntax_error/bad_implied_do_2.f
      program prog
      write(6, *) (i=1,2)
      end
